k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alejo
  labels:
    name: alejo
    environment: production
